# train-sim

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: main.rs  util.rs
src/terrain/: chunked.rs  from_map.rs  mod.rs
